--- a/src/styles.css
+++ b/src/styles.css
@@ -17,3 +17,33 @@
   gap: 1rem;
 }
 
+body {
+  background: rgb(26,179,148);
+  background: radial-gradient(circle, rgba(26,179,148,1) 0%, rgba(255,255,255,0) 0%, rgba(26,179,148,1) 100%);
+  height: 41em;
+}
+
+main {
+  height: 100%;
+}
+
+.container {
+  height: 100%;
+}
+
+.row {
+  height: 100%;
+}
+
+.main-color {
+  background-color: #1ab394;
+  color: white;
+}
+
+.secondary-color-text {
+  color: #535454;
+}
+
+.rubik-font {
+  font-family: 'Rubik', sans-serif;
+}
